--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-scroll-motion": "^0.3.3",
     "react-syntax-highlighter": "^15.5.0",
     "web-vitals": "^2.1.4"
   },
